gtk+3.0 (3.24.35-1) UNRELEASED; urgency=medium

  * New upstream release
    - Drop most patches, included in upstream release
  * d/p/dist/Reinstate-gdk-wayland-cursor-meson.build.patch:
    Add a missing build file from upstream git
  * d/p/Flush-drawable-surface-when-getting-a-pixbuf.patch:
    Add post-release fix from upstream to avoid an assertion failure in
    gnome-screenshot and epiphany
  * d/rules, d/run-tests.sh: Build using Meson
  * d/p/Disable-accessibility-dump-aka-a11ytests-test.patch,
    d/p/testsuite-Allow-reftest-output-directory-to-be-forced-via.patch:
    Drop patches that are not needed when building with Meson

 -- Simon McVittie <smcv@debian.org>  Wed, 23 Nov 2022 15:21:00 +0000

gtk+3.0 (3.24.34-5) unstable; urgency=medium

  * d/p/build-Define-USE_XDG_ACTIVATION-conditional-when-Wayland-.patch:
    Mark patch as applied upstream
  * Skip border-image-excess-size reftest on big-endian machines.
    Mitigates: #1024392

 -- Simon McVittie <smcv@debian.org>  Fri, 18 Nov 2022 23:56:42 +0000

gtk+3.0 (3.24.34-4) unstable; urgency=medium

  * d/patches: Update to upstream gtk-3-24 branch commit
    3.24.34-209-gf8d26e2acc (Windows- and macOS-specific changes excluded)
    - Don't crash on HiDPI systems if the cursor theme has cursors of
      the wrong size
    - When using server-side window decorations, don't draw a shadow around
      maximized windows
    - Fix popup coordinates on HiDPI
    - Don't force HighContrast icon theme, which is deprecated in favour of
      symbolic icons from the ordinary theme (already high-contrast)
    - Fix a memory leak when applying symbolic colours
    - Avoid pointer motion hint mask on Wayland
    - Fix runtime warnings in popover
    - Fix runtime warnings in font chooser for some fonts
    - Improve tablet stylus detection on X11
    - Fix drag-and-drop in Firefox on Plasma Wayland
    - Documentation/introspection fixes
    - Improve handling of titlebar clicks in mutter-based compositors